Fri Jul  5 02:14:00 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/fileutils.rb (FileUtils#symbolic_modes_to_i): Fix the wrong
	  character class [+-=], which happened to match all desired
	  characters but also match undesired characters.

	* lib/fileutils.rb (FileUtils.chmod{,_R}): Enhance the symbolic
	  mode parser to support the permission symbols u/g/o and multiple
	  actions as defined in SUS, so that chmod("g=o+w", file) works as
	  expected.  Invalid symbolic modes are now rejected with
	  ArgumentError.

Fri Jul  5 00:25:39 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (have_framework): allow header file to check.
	  [ruby-core:55745] [Bug #8593]

Thu Jul  4 22:31:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* object.c (rb_obj_equal): Fixed an rb_obj_equal documentation typo
	  where "a" was used instead of "obj".
	  Fixes GH-349. Patch by @adnandoric

Thu Jul  4 20:39:20 2013  Tanaka Akira  <akr@fsij.org>

	* tool/make-snapshot: Exit with EXIT_FAILURE when it fails.

Thu Jul  4 20:20:23 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (maxpow_in_bdigit_dbl): Use tables if available.
	  (maxpow_in_bdigit): Ditto.
	  (U16): New macro.
	  (U32): Ditto.
	  (U64): Ditto.
	  (U128): Ditto.
	  (maxpow16_exp): New table.
	  (maxpow16_num): New table.
	  (maxpow32_exp): New table.
	  (maxpow32_num): New table.
	  (maxpow64_exp): New table.
	  (maxpow64_num): New table.
	  (maxpow128_exp): New table.
	  (maxpow128_num): New table.

Thu Jul  4 18:25:25 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_cstr_to_inum): Avoid temporary buffer allocation except
	  very big base non-power-of-2 numbers.

Thu Jul  4 15:51:56 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_succ): use ONIGENC_MBCLEN_CHARFOUND_P correctly.

	* string.c (rb_str_dump): ditto.

Thu Jul  4 10:04:11 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* regcomp.c (): Merge Onigmo 5.13.5 23b523076d6f1161.

	  * [bug]  (thanks Akinori MUSHA and Ippei Obayashi)